feat: new routes /verify /details /users
